[metadata]
name = protobuf_commands
description = Create commands based on Google protocol buffers
description-file = README.md
description-content-type = text/markdown
home-page = http://protobuf_commands.readthedocs.io/
author = Chris Norman
author-email = chris.norman2@googlemail.com
license = MPL

[tool:pytest]
testpaths = "tests"
addopts = "-xq"

[flake8]
exclude = env, .eggs, build

[build_sphinx]
builders = html
source-dir = docs/source
build-dir = docs/build
all-files = 1
